added volume to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,8 @@
   "containerEnv": {"WORKSPACE_DIR": "${containerWorkspaceFolder}"},
   "settings": { 
 		"terminal.integrated.shell.linux": "/bin/zsh"
-	},
+  },
+  "mounts": [
+    "source=/var/lib/docker/volumes/zmk-config-de7af652afd48f550fa0b2c87dedeebc/_data,target=/workspaces,type=bind,consistency=cached"
+  ]
 }
